--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 node_modules
 # Keep environment variables out of version control
 .env
-.env.development
-.env.test
-.env.production
+.env.*
 .idea
 bun.lock
 package-lock.json
