--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev -r tsconfig-paths/register --respawn src/main.ts",
+    "start:prod": "dotenv -e .env.production -- node build/main.js",
+    "start:dev": "dotenv -e .env.development -- ts-node-dev -r tsconfig-paths/register --respawn src/main.ts",
+    "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "db:generate": "prisma generate",
-    "db:migrate:dev": "prisma migrate dev -n",
-    "db:migrate:deploy": "prisma migrate deploy",
+    "db:migrate:dev": "dotenv -e .env.development -- prisma migrate dev -n",
+    "db:migrate:deploy:dev": "dotenv -e .env.development -- prisma migrate deploy",
+    "db:migrate:deploy:prod": "dotenv -e .env.production -- prisma migrate deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -29,9 +32,12 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.0.0",
+    "dotenv-cli": "^8.0.0",
     "express": "^5.1.0",
     "reflect-metadata": "^0.2.2",
     "ts-node-dev": "^2.0.0",
-    "tsyringe": "^4.10.0"
+    "tsyringe": "^4.10.0",
+    "zod": "^3.25.67"
   }
 }
