--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start:prod": "dotenv -e .env.production -- node build/main.js",
     "start:dev": "dotenv -e .env.development -- ts-node-dev -r tsconfig-paths/register --respawn src/main.ts",
+    "start:debug": "dotenv -e .env.development -- ts-node-dev -r tsconfig-paths/register --inspect --respawn src/main.ts",
     "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "db:generate": "prisma generate",
     "db:migrate:dev": "dotenv -e .env.development -- prisma migrate dev -n",
