--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/bun": "^1.2.17",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
@@ -30,12 +31,16 @@
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "dotenv-cli": "^8.0.0",
     "express": "^5.1.0",
+    "pino": "^9.7.0",
+    "pino-http": "^10.5.0",
+    "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.2.2",
     "ts-node-dev": "^2.0.0",
     "tsyringe": "^4.10.0",
