--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start:prod": "dotenv -e .env.production -- node build/main.js",
     "start:dev": "dotenv -e .env.development -- ts-node-dev -r tsconfig-paths/register --respawn src/main.ts",
     "start:debug": "dotenv -e .env.development -- ts-node-dev -r tsconfig-paths/register --inspect --respawn src/main.ts",
-    "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
+    "build": "rimraf build && npm run db:generate && tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json && cpx \"src/database/generated/**/*\" build/database/generated",
     "db:generate": "prisma generate",
     "db:migrate:dev": "dotenv -e .env.development -- prisma migrate dev -n",
     "db:migrate:deploy:dev": "dotenv -e .env.development -- prisma migrate deploy",
@@ -23,14 +23,17 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.6",
+    "cpx": "^1.5.0",
     "prettier": "^3.6.2",
     "prisma": "^6.10.1",
+    "rimraf": "^6.0.1",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
+    "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -38,6 +41,7 @@
     "dotenv": "^17.0.0",
     "dotenv-cli": "^8.0.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pino": "^9.7.0",
     "pino-http": "^10.5.0",
     "pino-pretty": "^13.0.0",
