--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,3 +1,9 @@
 {
-  "include": ["src/**/*.ts"]
+  "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "outDir": "./build",
+    "rootDir": "./src"
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "build"]
 }
