--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@types/bun": "^1.2.17",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.3",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.0.6",
+    "@types/nodemailer": "^6.4.17",
     "cpx": "^1.5.0",
     "prettier": "^3.6.2",
     "prisma": "^6.10.1",
@@ -44,9 +46,11 @@
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "dotenv-cli": "^8.0.0",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.5",
     "pino": "^9.7.0",
     "pino-http": "^10.5.0",
     "pino-pretty": "^13.0.0",
