--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.0.6",
     "@types/nodemailer": "^6.4.17",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
     "cpx": "^1.5.0",
     "prettier": "^3.6.2",
     "prisma": "^6.10.1",
@@ -51,6 +53,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pino": "^9.7.0",
     "pino-http": "^10.5.0",
     "pino-pretty": "^13.0.0",
