--- a/package.json
+++ b/package.json
@@ -12,56 +12,57 @@
     "db:migrate:deploy:dev": "dotenv -e .env.development -- prisma migrate deploy",
     "db:migrate:deploy:prod": "dotenv -e .env.production -- prisma migrate deploy",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "db:prisma:studio": "dotenv -e .env.development -- prisma studio"
+    "db:prisma:studio:dev": "dotenv -e .env.development -- prisma studio",
+    "db:prisma:studio:prod": "dotenv -e .env.production -- prisma studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/bun": "^1.2.17",
-    "@types/cookie-parser": "^1.4.9",
-    "@types/cors": "^2.8.19",
-    "@types/ejs": "^3.1.5",
-    "@types/express": "^5.0.3",
-    "@types/multer": "^2.0.0",
-    "@types/node": "^24.0.6",
-    "@types/nodemailer": "^6.4.17",
-    "@types/passport": "^1.0.17",
-    "@types/passport-google-oauth20": "^2.0.16",
-    "cpx": "^1.5.0",
-    "prettier": "^3.6.2",
-    "prisma": "^6.10.1",
-    "rimraf": "^6.0.1",
-    "tsc-alias": "^1.8.16",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.8.3"
+    "@types/bcrypt": "5.0.2",
+    "@types/bun": "1.2.17",
+    "@types/cookie-parser": "1.4.9",
+    "@types/cors": "2.8.19",
+    "@types/ejs": "3.1.5",
+    "@types/express": "5.0.3",
+    "@types/multer": "2.0.0",
+    "@types/node": "24.0.6",
+    "@types/nodemailer": "6.4.17",
+    "@types/passport": "1.0.17",
+    "@types/passport-google-oauth20": "2.0.16",
+    "cpx": "1.5.0",
+    "prettier": "3.6.2",
+    "prisma": "6.10.1",
+    "rimraf": "6.0.1",
+    "tsc-alias": "1.8.16",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "5.8.3"
   },
   "dependencies": {
-    "@prisma/client": "^6.10.1",
-    "@types/jsonwebtoken": "^9.0.10",
-    "bcrypt": "^6.0.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2",
-    "cloudinary": "^2.7.0",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^17.0.0",
-    "dotenv-cli": "^8.0.0",
-    "ejs": "^3.1.10",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2",
-    "nodemailer": "^7.0.5",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "pino": "^9.7.0",
-    "pino-http": "^10.5.0",
-    "pino-pretty": "^13.0.0",
-    "reflect-metadata": "^0.2.2",
-    "ts-node-dev": "^2.0.0",
-    "tsyringe": "^4.10.0",
-    "zod": "^3.25.67"
+    "@prisma/client": "6.10.1",
+    "@types/jsonwebtoken": "9.0.10",
+    "bcrypt": "6.0.0",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.2",
+    "cloudinary": "2.7.0",
+    "cookie-parser": "1.4.7",
+    "cors": "2.8.5",
+    "dotenv": "17.0.0",
+    "dotenv-cli": "8.0.0",
+    "ejs": "3.1.10",
+    "express": "5.1.0",
+    "jsonwebtoken": "9.0.2",
+    "multer": "2.0.2",
+    "nodemailer": "7.0.5",
+    "passport": "0.7.0",
+    "passport-google-oauth20": "2.0.0",
+    "pino": "9.7.0",
+    "pino-http": "10.5.0",
+    "pino-pretty": "13.0.0",
+    "reflect-metadata": "0.2.2",
+    "ts-node-dev": "2.0.0",
+    "tsyringe": "4.10.0",
+    "zod": "3.25.67"
   }
 }
