--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
     "@types/cors": "2.8.19",
     "@types/ejs": "3.1.5",
     "@types/express": "5.0.3",
+    "@types/express-session": "1.18.2",
     "@types/multer": "2.0.0",
     "@types/node": "24.0.6",
     "@types/nodemailer": "6.4.17",
     "@types/passport": "1.0.17",
+    "@types/passport-facebook": "3.0.4",
     "@types/passport-google-oauth20": "2.0.16",
+    "@types/passport-microsoft": "2.1.1",
+    "@types/passport-twitter": "1.0.40",
     "cpx": "1.5.0",
     "prettier": "3.6.2",
     "prisma": "6.10.1",
@@ -52,11 +56,15 @@
     "dotenv-cli": "8.0.0",
     "ejs": "3.1.10",
     "express": "5.1.0",
+    "express-session": "1.18.2",
     "jsonwebtoken": "9.0.2",
     "multer": "2.0.2",
     "nodemailer": "7.0.5",
     "passport": "0.7.0",
+    "passport-facebook": "3.0.0",
     "passport-google-oauth20": "2.0.0",
+    "passport-microsoft": "2.1.0",
+    "passport-twitter": "1.0.4",
     "pino": "9.7.0",
     "pino-http": "10.5.0",
     "pino-pretty": "13.0.0",
