--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,10 +43,9 @@
       "@appTypes/*": ["src/shared/types/*"],
       "@utils/*": ["src/shared/utils/*"]
     },                                                   /* Specify a set of entries that re-map imports to additional lookup locations. */
-    // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
-    "typeRoots": [
-      "./src/shared/types"
-    ],                                                   /* Specify multiple folders that act like './node_modules/@types'. */
+    "types": ["node", "express"],
+    "typeRoots": ["./src/shared/types", "./node_modules/@types"], /* Specify multiple folders that act like './node_modules/@types'. */
+    // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */                                             /* Specify multiple folders that act like './node_modules/@types'. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "moduleSuffixes": [],                             /* List of file name suffixes to search when resolving a module. */
